tests/testcases/errors/BCE0018-1.boo
"""
BCE0018-1.boo(4,11): BCE0018: The name 'Bar' does not denote a valid type.
"""
class Foo(Bar):
	def constructor():
		pass
